added header to the project

--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ html, body, div, ul {
 	color: #191919;
 	margin: 0 0 1px; height: 100%; 
 	line-height: 1.5;
+    padding-bottom: 60px;
+       
 }
 @font-face {
    font-family: 'BoycottRegular';
